--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ES2020",
     "module": "commonjs",
     "rootDir": "src",
-    "outDir": "dist",
+    "outDir": "src/dist",
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true
